20040310 fuse.c,sound.c,spectrum.c,timer.c,sound/: move the sound code
	 detection logic into the new sound/lowlevel.h.
20040310 configure.in,sound/{Makefile.am,hpsound.c,lowlevel.h}: add HP-UX
         sound support (patch #911651) (Stuart Brady).
20040311 Makefile.am,input.[ch],keyboard.[ch],keysyms.{dat,pl},ui/ui.h,
	 ui/gtk/gtkkeyboard.c: first changes to introduce a generalised
	 input layer.
20040311 input.[ch],keysyms.dat,ui/options.dat,ui/sdl/sdlkeyboard.c,widget/:
	 widgets and SDL UI working with the new input layer code.
20040311 ui/xlib/{xdisplay.c,xkeyboard.c}: make Xlib UI work with new
	 input layer code.
20040311 ui/gtk/roms.c: make changing ROMs work.
20040311 machine.c: remove the segfault which would occur if one of the
	 ROMs of a multi-ROM machine didn't load.
20040312 ay.c: unused bits of AY registers are silently zeroed (basically
	 equivalent to patch #911206 by Stuart Brady).
20040317 sound/Makefile.am: Add libspectrum path to includes.
20040319 Makefile.am,fuse.c,machine.c,periph.c,settings.dat,ui/options.dat,
	 ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,widget_internals.h}:
	 add support for the "simple 8-bit" IDE interface (part of patch
	 #916816) (Garry Lancaster).
20040319 simpleide.[ch],ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,
	 widget_internals.h}: add a 'commit' menu option for the IDE
	 disks.
20040320 snapshot.c: copy RAM page 8-15 into the libspectrum_snap structure.
20040320 snapshot.c,tape.c: select output format based on filename.
20040320 snapshot.c,trdos.[ch]: support the Beta 128 block of the SZX format.
20040320 machine.[ch],z80/{coretest.c,z80_ops.c}: use libspectrum's new
	 'Even M1' capability.
20040322 input.c,joystick.[ch]: convert the QAOP<space> joystick emulation
	 over to using the new input layer.
20040323 input.c,joystick.[ch],settings.dat,ui/gtk/{gtkinternal.h,
	 gtkjoystick.c,gtkui.c}: first bits of code allowing emulation of
	 multiple joystick types.